--- a/WebsiteAssignmentFiles/index.html
+++ b/WebsiteAssignmentFiles/index.html
@@ -3,43 +3,83 @@
     <header>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
+        <title>HONGCHUN CHEN</title>
     </header>
     <body>  
         <!---Navigation--->
         <!--This section of code defines the navigation bar at the top of the page.  The classes used here are defined in the style.css file.-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <!--This code defines the "My Webpage" link in the top left corner of the navigation pane-->
-                <a class="navbar-brand" href="./index.html">My Webpage</a>
-                <!--This code defines the "List" link in the top right corner of the navigation pane-->
+                <!--This code defines the "My Webpage" link in the top right corner of the navigation pane-->
+                <a class="navbar-brand" href="">Portfolio</a>
+                <!--This code defines the "List" link in the top left corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Project1: Self-serve onboarding experience Onboarding</a></li>
+                  <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Project2: AR-assisted Rehabilitation Healthcare</a></li>
                 </ul>
             </div>
         </nav>
-        <!--This section defines the middle section of the webpage-->
+        <!--This code creates the middle section of the webpage-->
         <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
-                
-                <!-- This code is for the student name-->
-                <h1 class="masthead-heading text-uppercase mb-0">Test Student</h1>
-                <!--This code creates the two lines separating the student name from the subtitle-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!--This code creates the subheading underneath the line dividers-->
-                <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
-            </div>
+            <h1>My Works</h1>
         </header>
-        <section class="text-center">
-
-            <div class="col-md-6 col-lg-4 mb-5">
-                <!-- put your bio paragraph here; remember to use the correct html tags -->
-                
-            </div>
+        <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
+        <section class="mt-5 text-center">
+            <div id="showDataJSON"></div>
         </section>
     </body>
 
+    <script>
+
+        /*
+        * RENDERING THE JSON TABLE
+        * Get JSON data from file
+        * Get headers from retrieved data
+        * Set headers for table
+        * Add data to table
+        * Add table to DOM
+        */
+        fetch('./list_data.json')
+            .then(response => response.json())
+            .then(data => {
+
+                /*
+                This section creates the base table and finds the root json node.
+                */
+                var jsonTable = document.createElement("table");
+                var tr = jsonTable.insertRow(-1);   
+                jsonTable.style.width = "75%";
+                let root;
+                for (let prop in data) {
+                    root = prop;
+                }
+
+                /*
+                This section selects the headers for the table
+                */
+                let headers = Object.keys(data[root][0]);
+                headers.forEach(header => {
+                    var th = document.createElement("th");      
+                    th.innerHTML = header;
+                    tr.appendChild(th);
+                })              
+                /*
+                This section adds the data into each row of the list
+                */
+                let items = Object.keys(data[root]);
+                items.forEach(item => {
+                    tr = jsonTable.insertRow(-1);
+                    for (let key in data[root][item]) {
+                       var tabCell = tr.insertCell(-1);
+                       tabCell.innerHTML = data[root][item][key];
+                    }
+                })
+                /*
+                This section adds the table to the HTML
+                */
+                var divContainer = document.getElementById("showDataJSON");
+                divContainer.innerHTML = "";
+                divContainer.appendChild(jsonTable);
+            });
+    </script>  
 </html>
