--- a/WebsiteAssignmentFiles/index.html
+++ b/WebsiteAssignmentFiles/index.html
@@ -14,14 +14,15 @@
                 <a class="navbar-brand" href="">Portfolio</a>
                 <!--This code defines the "List" link in the top left corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Project1: Self-serve onboarding experience Onboarding</a></li>
-                  <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Project2: AR-assisted Rehabilitation Healthcare</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Works</a></li>
                 </ul>
             </div>
         </nav>
         <!--This code creates the middle section of the webpage-->
         <header class="masthead bg-primary text-white text-center">
-            <h1>My Works</h1>
+            <h1>Hong-Chun Chen</h1>
+	            <p1>School of Information MIMS24 Student</p1><br>
+	            <p1>Hi, I'm Kloe 👋 <br> I have 3+ years of expertise in identifying user insights and designing interface experiences at digital.I care about creating design with clear user insight, data-informed iteration, and collaboration with stakeholders.</p1>
         </header>
         <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
         <section class="mt-5 text-center">
