--- a/WebsiteAssignmentFiles/index.html
+++ b/WebsiteAssignmentFiles/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <!--This code defines the "My Webpage" link in the top right corner of the navigation pane-->
-                <a class="navbar-brand" href="list.html">Portfolio</a>
+                <a class="navbar-brand" href="https://kc2283.github.io/WebsiteAssignmentFiles/list.html">Portfolio</a>
                 <!--This code defines the "List" link in the top left corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">Works</a></li>
@@ -51,7 +51,7 @@
                 */
                 var jsonTable = document.createElement("table");
                 var tr = jsonTable.insertRow(-1);   
-                jsonTable.style.width = "75%";
+                jsonTable.style.width = "50%";
                 let root;
                 for (let prop in data) {
                     root = prop;
