--- a/WebsiteAssignmentFiles/list.html
+++ b/WebsiteAssignmentFiles/list.html
@@ -45,14 +45,14 @@
                 /*
                 This section creates the base table and finds the root json node.
                 */
-                <center> 
+                
                 var jsonTable = document.createElement("table");
                 var tr = jsonTable.insertRow(-1);   
                 jsonTable.sty.width = "75%";
+                jsonTable.style="border: 1px solid black; margin-left: auto;margin-right:auto";
                 let root;
                 for (let prop in data) {
                     root = prop;
-                    </center> 
                 }
 
                 /*
