--- a/WebsiteAssignmentFiles/index.html
+++ b/WebsiteAssignmentFiles/index.html
@@ -51,7 +51,8 @@
                 */
                 var jsonTable = document.createElement("table");
                 var tr = jsonTable.insertRow(-1);   
-                jsonTable.style.width = "50%";
+                jsonTable.style.width = "75%";
+                jsonTable.style="border: 1px solid black; margin-left: auto;margin-right:auto";
                 let root;
                 for (let prop in data) {
                     root = prop;
